@@ -8,8 +8,8 @@
 package com.aptana.js.internal.core.node;
 
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.MessageFormat;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -31,9 +31,10 @@ import com.aptana.core.util.CollectionsUtil;
 import com.aptana.core.util.EclipseUtil;
 import com.aptana.core.util.ExecutableUtil;
 import com.aptana.core.util.FileUtil;
+import com.aptana.core.util.IProcessRunner;
 import com.aptana.core.util.PlatformUtil;
+import com.aptana.core.util.ProcessRunner;
 import com.aptana.core.util.ProcessStatus;
-import com.aptana.core.util.ProcessUtil;
 import com.aptana.core.util.StringUtil;
 import com.aptana.ide.core.io.downloader.DownloadManager;
 import com.aptana.js.core.JSCorePlugin;
@@ -62,8 +63,8 @@ public class NodeJSService implements INodeJSService
 
 	private static final String NODE_EXE = "node.exe"; //$NON-NLS-1$
 
-	private static final String MAC_NODE_URL = "http://go.aptana.com/installer_nodejs_osx"; //$NON-NLS-1$
-	private static final String WIN_NODE_URL = "http://go.aptana.com/installer_nodejs_windows"; //$NON-NLS-1$
+	private static final String MAC_NODE_URL = "http://go.appcelerator.com/installer_nodejs_osx"; //$NON-NLS-1$
+	private static final String WIN_NODE_URL = "http://go.appcelerator.com/installer_nodejs_windows"; //$NON-NLS-1$
 	private static final String MAC_EXTENSION = ".pkg"; //$NON-NLS-1$
 	private static final String WIN_EXTENSION = ".msi"; //$NON-NLS-1$
 
@@ -153,15 +154,15 @@ public class NodeJSService implements INodeJSService
 		// Grab the URL for the platform
 		String rawURL = PlatformUtil.isWindows() ? WIN_NODE_URL : MAC_NODE_URL;
 		String extension = PlatformUtil.isWindows() ? WIN_EXTENSION : MAC_EXTENSION;
-		URL url;
+		URI uri;
 		try
 		{
-			url = new URL(rawURL);
+			uri = new URI(rawURL);
 		}
-		catch (MalformedURLException e)
+		catch (URISyntaxException e)
 		{
 			IdeLog.logError(JSCorePlugin.getDefault(),
-					MessageFormat.format("Bad Download URL for node: {0}", rawURL), e); //$NON-NLS-1$
+					MessageFormat.format("Bad Download URI for node: {0}", rawURL), e); //$NON-NLS-1$
 			return new Status(IStatus.ERROR, JSCorePlugin.PLUGIN_ID, MessageFormat.format(
 					Messages.NodeJSService_BadURLError, rawURL), e);
 		}
@@ -169,31 +170,30 @@ public class NodeJSService implements INodeJSService
 		try
 		{
 			// download the installer
-			File file = download(url, extension, sub.newChild(90));
+			File file = download(uri, extension, sub.newChild(90));
 			// run the installer
 			IStatus status;
 			if (PlatformUtil.isWindows())
 			{
-				status = ProcessUtil.runInBackground("msiexec", Path.ROOT, "/i", file.getAbsolutePath()); //$NON-NLS-1$ //$NON-NLS-2$
+				status = new ProcessRunner().runInBackground(Path.ROOT, "msiexec", "/i", file.getAbsolutePath()); //$NON-NLS-1$ //$NON-NLS-2$
 			}
 			else
 			{
+				List<String> args = CollectionsUtil.newList("sudo"); //$NON-NLS-1$
 				if (password == null || password.length == 0)
 				{
 					// if sudo doesn't require a password
-					status = ProcessUtil.run("sudo", Path.ROOT,//$NON-NLS-1$
-							null, null, sub.newChild(95), "--",//$NON-NLS-1$
-							"/usr/sbin/installer", "-pkg", file.getAbsolutePath(), "-target", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-							"/"); //$NON-NLS-1$
+					args.add("-n"); //$NON-NLS-1$
 				}
 				else
 				{
 					// sudo requires a password
-					status = ProcessUtil.run("sudo", Path.ROOT,//$NON-NLS-1$
-							password, null, sub.newChild(95), "-S", "--",//$NON-NLS-1$ //$NON-NLS-2$
-							"/usr/sbin/installer", "-pkg", file.getAbsolutePath(), "-target", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
-							"/"); //$NON-NLS-1$
+					args.add("-S"); //$NON-NLS-1$
 				}
+				CollectionsUtil.addToList(args, "--",//$NON-NLS-1$
+						"/usr/sbin/installer", "-pkg", file.getAbsolutePath(), "-target", //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+						"/"); //$NON-NLS-1$
+				status = createProcessRunner().run(Path.ROOT, null, password, args, sub.newChild(95));
 			}
 			// Report the status from the installer.
 			if (!status.isOK())
@@ -232,22 +232,27 @@ public class NodeJSService implements INodeJSService
 		return Status.OK_STATUS;
 	}
 
+	protected IProcessRunner createProcessRunner()
+	{
+		return new ProcessRunner();
+	}
+
 	/**
-	 * Downloads a file from url, return the {@link File} on disk where it was saved.
+	 * Downloads a file from uri, return the {@link File} on disk where it was saved.
 	 * 
-	 * @param url
+	 * @param uri
 	 * @param monitor
 	 * @return
 	 * @throws CoreException
 	 */
-	private File download(URL url, String extension, IProgressMonitor monitor) throws CoreException
+	private File download(URI uri, String extension, IProgressMonitor monitor) throws CoreException
 	{
 		DownloadManager manager = new DownloadManager();
-		IPath path = Path.fromPortableString(url.getPath());
+		IPath path = Path.fromPortableString(uri.getPath());
 		String name = path.lastSegment();
 		File f = new File(FileUtil.getTempDirectory().toFile(), name + extension);
 		f.deleteOnExit();
-		manager.addURL(url, f);
+		manager.addURI(uri, f);
 		IStatus status = manager.start(monitor);
 		if (!status.isOK())
 		{
